--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
+      - ./common:/common
       - /app/node_modules
       - /app/.nuxt
     networks:
